<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    app:contentInsetStart="0dp"
    android:background="@color/colorOne"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/apa"
        android:contentDescription="@string/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center">


        <EditText
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_txt_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgsearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/search"
                android:src="@drawable/ic_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:hint="@string/ask"
                android:textColor="@color/colorThree"
                android:textSize="13sp" />

        </EditText>


        <ImageView
            android:id="@+id/wishlist"
            android:contentDescription="@string/favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialCardView"
            app:layout_constraintTop_toTopOf="@+id/materialCardView" />

        <ImageView
            android:id="@+id/shoping_cart"
            android:contentDescription="@string/store"
            android:layout_marginEnd="38.25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shopping_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/wishlist"
            app:layout_constraintTop_toTopOf="@+id/wishlist" />

        <ImageView
            android:id="@+id/notification"
            android:contentDescription="@string/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_notifications"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shoping_cart"
            app:layout_constraintTop_toTopOf="@+id/shoping_cart" />


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.Toolbar>