<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".BottomNavigation.ProdukFragment">

    <RelativeLayout
        android:id="@+id/relative1"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/LifeStyle"
                android:textColor="#000"
                android:layout_marginStart="30sp"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>-->

        <LinearLayout
            android:id="@+id/linier1"
            android:layout_marginTop="7dp"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:id="@+id/atk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/atk"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ATK"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/fooddrink"/>

                <TextView
                    android:id="@+id/fooddrink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/fooddrink"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                n<ImageView
                android:contentDescription="@string/digital"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/fashion"/>

                <TextView
                    android:id="@+id/fashion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/fashion"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/book"/>

                <TextView
                    android:id="@+id/book"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/book"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

        </LinearLayout>

        <!--<TextView
                android:id="@+id/text3"
                android:layout_below="@+id/linier1"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="@string/Sparepart"
                android:textColor="#000"
                android:layout_marginStart="30sp"
                android:textAlignment="textStart"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>-->

        <LinearLayout
            android:id="@+id/linier2"
            android:layout_below="@id/linier1"
            android:layout_marginTop="30dp"
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/otomotif"/>

                <TextView
                    android:id="@+id/otomotif"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/otomotif"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/electric"/>

                <TextView
                    android:id="@+id/electric"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/electrik"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                n<ImageView
                android:contentDescription="@string/digital"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/network"/>

                <TextView
                    android:id="@+id/network"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/network"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:contentDescription="@string/product"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:src="@drawable/software"/>

                <TextView
                    android:id="@+id/software"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/software"
                    android:textColor="#172646"
                    android:textSize="13sp"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>